--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "require": {
         "php": ">=5.6.0",
         "ipl/html": ">=0.3.0",
+        "ipl/i18n": ">=0.1.0",
         "ipl/orm": ">=0.1.0",
         "ipl/sql": ">=0.1.0",
         "ipl/stdlib": ">=0.5.0",
