--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,13 @@
     },
     "require": {
         "php": ">=5.6.0",
-        "ipl/html": ">=0.3.0",
-        "ipl/i18n": ">=0.1.0",
-        "ipl/orm": ">=0.1.0",
-        "ipl/sql": ">=0.1.0",
-        "ipl/stdlib": ">=0.5.0",
-        "ipl/validator": ">=0.1.0",
-        "ipl/web": ">=0.1.0"
+        "ipl/html": "^0.4.0",
+        "ipl/i18n": "^0.1.0",
+        "ipl/orm": "^0.2.0",
+        "ipl/sql": "^0.3.1",
+        "ipl/stdlib": "^0.9.0",
+        "ipl/validator": "^0.2.0",
+        "ipl/web": "^0.2.0"
     },
     "require-dev": {
     },
