--- a/.github/workflows/create-snapshot.yml
+++ b/.github/workflows/create-snapshot.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout code base
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Prepare Git environment
         run: |
