--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "ipl/sql": "^0.5.0",
         "ipl/stdlib": "^0.12.0",
         "ipl/validator": "^0.4.0",
-        "ipl/web": "^0.6.0"
+        "ipl/web": "dev-third-party-improvements"
     },
     "require-dev": {
     },
