--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "ipl/html": "^0.6.0",
         "ipl/i18n": "^0.2.0",
         "ipl/orm": "^0.4.0",
+        "ipl/scheduler": "^0.1.0",
         "ipl/sql": "^0.6.0",
         "ipl/stdlib": "^0.12.0",
         "ipl/validator": "^0.4.0",
