--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,15 @@
             "php": "7.2.9"
         }
     },
+    "repositories": [
+        {
+            "type": "path",
+            "url": "./replacer"
+        }
+    ],
     "require": {
         "php": ">=7.2",
+        "repl/acer": "@dev",
         "ipl/html": "^0.8.0",
         "ipl/i18n": "^0.2.0",
         "ipl/orm": "^0.6.0",
@@ -20,8 +27,6 @@
         "ipl/stdlib": "^0.13.0",
         "ipl/validator": "^0.5.0",
         "ipl/web": "^0.9.0"
-    },
-    "require-dev": {
     },
     "autoload": {
         "psr-0": { "AssetLoader": "" }
