--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,9 @@
         "sort-packages": true,
         "platform": {
             "php": "7.2.9"
+        },
+        "allow-plugins": {
+            "cweagans/composer-patches": true
         }
     },
     "require": {
@@ -19,7 +22,8 @@
         "ipl/sql": "^0.7.0",
         "ipl/stdlib": "^0.13.0",
         "ipl/validator": "^0.5.0",
-        "ipl/web": "^0.9.0"
+        "ipl/web": "^0.9.0",
+        "cweagans/composer-patches": "~1.0"
     },
     "require-dev": {
     },
@@ -30,5 +34,13 @@
         "post-update-cmd": [
             "AssetLoader::update"
         ]
+    },
+    "extra": {
+        "composer-exit-on-patch-failure": true,
+        "patches": {
+            "ramsey/collection": {
+                "Collection: Add PHP 8.1 support": "patches/ramsey-collection.patch"
+            }
+        }
     }
 }
