--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     },
     "require": {
         "php": ">=7.2",
-        "ipl/html": "dev-main as 99.x-dev",
+        "ipl/html": "dev-support-php-85 as 99.x-dev",
         "ipl/i18n": "dev-main as 99.x-dev",
         "ipl/orm": "dev-main as 99.x-dev",
         "ipl/scheduler": "dev-main as 99.x-dev",
